fix: decreased icon size to prevent overflow

--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -55,6 +55,6 @@
   overflow: hidden;
 
   mat-icon {
-    font-size: 32px;
+    font-size: 24px;
   }
 }
